--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
+    "@haaxor1689/eslint-config": "2.0.2",
+    "@haaxor1689/prettier-config": "2.0.1",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@types/react-router-dom": "^5.3.3",
-    "@haaxor1689/eslint-config": "2.0.2",
-    "@haaxor1689/prettier-config": "2.0.1",
     "@typescript-eslint/eslint-plugin": "5.38.1",
     "@typescript-eslint/parser": "5.38.1",
     "eslint": "8.24.0",
